# libcdirectory

./: .codecov.yml  .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  README  acinclude.m4  appveyor.yml  build.ps1  configure.ac  libcdirectory-wiki.ini  libcdirectory.ini  libcdirectory.pc.in  libcdirectory.spec.in  runtests.sh  synclibs.ps1  synclibs.sh  syncsharedlibs.sh
.travis/: runtests.sh  script.sh
common/: config_winapi.h
dpkg/: changelog.in  control  copyright  copyright.in  rules
include/: Makefile.am  libcdirectory.h.in
include/libcdirectory/: codepage.h  definitions.h.in  error.h  extern.h  features.h.in  types.h.in
libcdirectory/: Makefile.am  libcdirectory.c  libcdirectory.rc.in  libcdirectory_definitions.h.in  libcdirectory_directory.c  libcdirectory_directory.h  libcdirectory_directory_entry.c  libcdirectory_directory_entry.h  libcdirectory_error.c  libcdirectory_error.h  libcdirectory_extern.h  libcdirectory_libcerror.h  libcdirectory_libclocale.h  libcdirectory_libcstring.h  libcdirectory_libuna.h  libcdirectory_support.c  libcdirectory_support.h  libcdirectory_system_string.c  libcdirectory_system_string.h  libcdirectory_types.h  libcdirectory_unused.h  libcdirectory_wide_string.c  libcdirectory_wide_string.h
m4/: tests.m4
manuals/: Makefile.am  libcdirectory.3
msvscpp/: Makefile.am  libcdirectory.sln
msvscpp/cdirectory_test_directory/: cdirectory_test_directory.vcproj
msvscpp/cdirectory_test_directory_entry/: cdirectory_test_directory_entry.vcproj
msvscpp/cdirectory_test_error/: cdirectory_test_error.vcproj
msvscpp/cdirectory_test_get_version/: cdirectory_test_get_version.vcproj
msvscpp/cdirectory_test_support/: cdirectory_test_support.vcproj
msvscpp/cdirectory_test_system_string/: cdirectory_test_system_string.vcproj
msvscpp/libcdirectory/: libcdirectory.vcproj
msvscpp/libcerror/: libcerror.vcproj
msvscpp/libclocale/: libclocale.vcproj
msvscpp/libcstring/: libcstring.vcproj
msvscpp/libuna/: libuna.vcproj
po/: ChangeLog
tests/: Makefile.am  cdirectory_test_directory.c  cdirectory_test_directory_entry.c  cdirectory_test_error.c  cdirectory_test_get_version.c  cdirectory_test_libcdirectory.h  cdirectory_test_libcerror.h  cdirectory_test_libcstring.h  cdirectory_test_macros.h  cdirectory_test_malloc.c  cdirectory_test_malloc.h  cdirectory_test_memory.c  cdirectory_test_memory.h  cdirectory_test_support.c  cdirectory_test_system_string.c  cdirectory_test_unused.h  pkgbuild.sh  runtests.sh  syncsharedlibs.sh  test_api_types.ps1  test_api_types.sh  test_library.at  test_library.ps1  test_library.sh  test_manpages.at
