include_HEADERS = \
	libcdirectory.h

pkginclude_HEADERS = \
	libcdirectory/codepage.h \
	libcdirectory/definitions.h \
	libcdirectory/error.h \
	libcdirectory/extern.h \
	libcdirectory/features.h \
	libcdirectory/types.h

EXTRA_DIST = \
	libcdirectory.h.in \
	libcdirectory/definitions.h.in \
	libcdirectory/features.h.in \
	libcdirectory/types.h.in

DISTCLEANFILES = \
	libcdirectory.h \
	libcdirectory/definitions.h \
	libcdirectory/features.h \
	libcdirectory/types.h \
	Makefile \
	Makefile.in

