MSVSCPP_FILES = \
	cdirectory_test_directory/cdirectory_test_directory.vcproj \
	cdirectory_test_directory_entry/cdirectory_test_directory_entry.vcproj \
	cdirectory_test_error/cdirectory_test_error.vcproj \
	cdirectory_test_support/cdirectory_test_support.vcproj \
	cdirectory_test_system_string/cdirectory_test_system_string.vcproj \
	libcdirectory/libcdirectory.vcproj \
	libcerror/libcerror.vcproj \
	libclocale/libclocale.vcproj \
	libuna/libuna.vcproj \
	libcdirectory.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

